Second_Study/src/main/java/com/example/global/error/CustomException.java
package com.example.global.error;public class CustomException {
}
